<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.allen.kotlin.activity.LoginActivity">

    <TextView
        android:id="@+id/login_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/ui_space_length_40"
        android:elevation="@dimen/ui_space_length_4"
        android:gravity="center"
        android:text="@string/sign_in"
        android:textColor="@color/topeka_primary"
        android:textSize="@dimen/ui_font_size_18"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/ui_space_length_1"
        android:layout_below="@+id/login_title"
        android:background="@color/topeka_primary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="@dimen/ui_space_length_15"
            android:paddingStart="@dimen/ui_space_length_15"
            app:hintTextAppearance="@style/EdtHintTextAppearance">

            <EditText
                android:id="@+id/edt_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_name"
                android:inputType="textAutoCorrect"
                android:maxLines="1"
                android:textSize="@dimen/ui_font_size_18"
                android:theme="@style/EditTextTheme" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ui_space_length_20"
            android:paddingEnd="@dimen/ui_space_length_15"
            android:paddingStart="@dimen/ui_space_length_15"
            app:hintTextAppearance="@style/EdtHintTextAppearance">

            <EditText
                android:id="@+id/edt_pwd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/pwd"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColorLink="@color/topeka_primary"
                android:textSize="@dimen/ui_font_size_18"
                android:theme="@style/EditTextTheme" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/ui_space_length_40"
            android:layout_marginEnd="@dimen/ui_space_length_15"
            android:layout_marginStart="@dimen/ui_space_length_15"
            android:layout_marginTop="@dimen/ui_space_length_30"
            android:background="@drawable/login_bg_selector"
            android:elevation="@dimen/ui_space_length_4"
            android:text="@string/login"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/txt_forgot_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginEnd="@dimen/ui_space_length_15"
            android:layout_marginTop="@dimen/ui_space_length_15"
            android:text="@string/forgot_pwd"
            android:textColor="@color/topeka_primary"
            android:textSize="@dimen/ui_font_size_14" />
    </LinearLayout>

</RelativeLayout>
